[package]
name = "voting-contract"
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
bs58 = "0.3"



[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
